# offline-docs

./: .gitignore  README.md  pyproject.toml
offline_docs/: cli.py  dependencies.py  download.py  paths.py
offline_docs_py/: dependencies.py
scripts/: download_python_docs.py  open_docs.py  read_dependencies.py
test/: test_version.py
test_cli/offline_docs/: test_cli.py
tests/: test_offline_docs_py.py  test_version.py
tests/offline_docs/: test_cli.py  test_dependencies.py
tests/offline_docs_py/: test_dependencies.py
