[tool.poetry]
name = "offline-docs"
version = "0.2.1"
description = ""
authors = ["top-on <top-on@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
wget = "^3.2"
typer = "^0.4.0"
urlpath = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
flake8 = "^4.0.1"
notebook = "^6.4.6"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
offline-docs = 'offline_docs.cli:main'
